kthSmallestElementInAMatrix implemented